--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
           <img src="images/LogoBarber.png" alt="Logoul Frizeriei" />
         </a>
         <div class="social-media">
+          <svg  width="60" height="3">
+            <line x1="0" y1="2.5" x2="262.86" y2="2.5" stroke="#303030" stroke-width="1" />
+          </svg>
           <a class="social-media-link link" href="https://www.youtube.com/@DorianPopaHatz" target="_blank">Youtube</a>
           <a class="social-media-link link" href="https://www.instagram.com/eusuntdorian/" target="_blank">Instagram</a>
         </div>
@@ -53,7 +56,12 @@
         </div>
         <!-- Hero Section -->
         <div class="hero-text-container">
-          <h4 class="subtitle">A hair salon for men in Kyiv</h4>
+          <h4 class="subtitle">
+            <svg  width="60" height="3">
+              <line x1="0" y1="2.5" x2="262.86" y2="2.5" stroke="rgba(157, 164, 189, 0.6)" stroke-width="1"   />
+            </svg>
+            A hair salon for men in Kyiv
+          </h4>
           <h1 class="hero-title">BarberShop</h1>
           <p class="text">
             We are experts in trendy men's haircuts. We work quickly, carefully
@@ -76,7 +84,12 @@
           alt="Beard Style two"
         />
         <div class="about-text-container">
-          <h4 class="subtitle">About</h4>
+          <h4 class="subtitle">
+            <svg  width="60" height="3">
+              <line x1="0" y1="2.5" x2="262.86" y2="2.5" stroke="#303030" stroke-width="1"   />
+            </svg>
+            About
+          </h4>
           <h2 class="title">Best Barbershop in your city</h2>
           <p class="text">
             If you want to add more confidence to your image, you should
@@ -95,28 +108,42 @@
       <!-- Services section -->
       <section class="services-container">
         <div class="align-services">
-          <h4 class="subtitle">Spend your time with the best masters</h4>
+          <h4 class="subtitle">
+            <svg  width="60" height="3">
+              <line x1="0" y1="2.5" x2="262.86" y2="2.5" stroke="rgba(157, 164, 189, 0.6)" stroke-width="1"   />
+            </svg>
+            Spend your time with the best masters
+          </h4>
           <h2 class="title">Services and prices</h2>
           <div class="services-prices">
             <div class="services-left-prices">
               <ul class="unstyled-list">
                 <li class="services-item">
                   <p class="text">Men's haircut</p>
-                  <svg class="services-line" width="262.86" height="5">
+                  <svg  width="262.86" height="5">
                    <line x1="0" y1="2.5" x2="262.86" y2="2.5" stroke="#2a2a2a" stroke-width="1" />
                   </svg>
                   <p class="text">from 300 uah</p>
                 </li>
                 <li class="services-item">
                   <p class="text">Beard trim</p>
+                  <svg  width="286.94" height="5">
+                   <line x1="0" y1="2.5" x2="286.94" y2="2.5" stroke="#2a2a2a" stroke-width="1" />
+                  </svg>
                   <p class="text">from 300 uah</p>
                 </li>
                 <li class="services-item">
                   <p class="text">Mustache trim</p>
+                  <svg  width="253.83" height="5">
+                   <line x1="0" y1="2.5" x2="253.83" y2="2.5" stroke="#2a2a2a" stroke-width="1" />
+                  </svg>
                   <p class="text">from 200 uah</p>
                 </li>
                 <li class="services-item">
                   <p class="text">Straight razor shave</p>
+                  <svg  width="205.68" height="5">
+                   <line x1="0" y1="2.5" x2="205.68" y2="2.5" stroke="#2a2a2a" stroke-width="1" />
+                  </svg>
                   <p class="text">from 200 uah</p>
                 </li>
               </ul>
@@ -125,18 +152,30 @@
               <ul class="unstyled-list">
                 <li class="services-item">
                   <p  class="text">Trainee's haircut</p>
+                  <svg  width="247" height="5">
+                   <line x1="0" y1="2.5" x2="247" y2="2.5" stroke="#2a2a2a" stroke-width="1" />
+                  </svg>
                   <p class="text">from 50 uah.</p>
                 </li>
                 <li class="services-item">
                   <p class="text">Haircut under the nozzle</p>
+                  <svg  width="165" height="5">
+                   <line x1="0" y1="2.5" x2="165" y2="2.5" stroke="#2a2a2a" stroke-width="1" />
+                  </svg>
                   <p class="text">from 200 uah.</p>
                 </li>
                 <li class="services-item">
                   <p class="text">Children's haircut (0-12 y.o.)</p>
+                  <svg  width="137" height="5">
+                   <line x1="0" y1="2.5" x2="137" y2="2.5" stroke="#2a2a2a" stroke-width="1" />
+                  </svg>
                   <p class="text">from 300 uah.</p>
                 </li>
                 <li class="services-item">
                   <p class="text">Camouflage of gray hair</p>
+                  <svg  width="172" height="5">
+                   <line x1="0" y1="2.5" x2="172" y2="2.5" stroke="#2a2a2a" stroke-width="1" />
+                  </svg>
                   <p class="text">from 200 uah.</p>
                 </li>
               </ul>
@@ -176,7 +215,12 @@
           </li>
         </ul>
         <div class="comercial-text">
-          <h4 class="subtitle">Old traditional school</h4>
+          <h4 class="subtitle">
+             <svg  width="60" height="3">
+              <line x1="0" y1="2.5" x2="262.86" y2="2.5" stroke="#303030" stroke-width="1" />
+            </svg>
+            Old traditional school
+          </h4>
           <h2 class="title">¿Why people come to us?</h2>
           <p class="text">
             Only good things are said about us. But it's better to see and feel 1
@@ -187,30 +231,130 @@
       <!-- Barbers section -->
       <section class="barbers-container">
         <div class="barbers-align">
-          <h4 class="subtitle">For true enjoyers of the atmosphere</h4>
+          <h4 class="subtitle">
+            <svg  width="60" height="3">
+              <line x1="0" y1="2.5" x2="262.86" y2="2.5" stroke="#303030" stroke-width="1" />
+            </svg>
+            For true enjoyers of the atmosphere
+          </h4>
           <h2 class="title">Our barbers</h2>
           <ul class="barbers-list">
             <li class="barbers-list-item">
               <img width="370" src="images/barbers/John.jpg" alt="John" />
               <p class="barbers-name">John Smith</p>
               <p class="barbers-ocupation">Extreme Barber</p>
+              <ul class="unstyled-list social-media-list">
+                <li>
+                  <a class="social-link">
+                    <svg class="social-icon">
+                      <use href="./images/svgs/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                   <a class="social-link">
+                    <svg class="social-icon">
+                      <use href="./images/svgs/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                   <a class="social-link">
+                    <svg class="social-icon">
+                      <use href="./images/svgs/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                   </a>
+                </li>
+                <li>
+                   <a class="social-link">
+                    <svg class="social-icon">
+                      <use href="./images/svgs/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                   </a>
+                </li>
+              </ul>
             </li>
             <li class="barbers-list-item">
               <img width="370" src="images/barbers/Michele.jpg" alt="Michele" />
               <p class="barbers-name">Michele Doe</p>
               <p class="barbers-ocupation">Extreme Barber</p>
+             <ul class="unstyled-list social-media-list">
+                <li>
+                  <a class="social-link">
+                    <svg class="social-icon">
+                      <use href="./images/svgs/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                   <a class="social-link">
+                    <svg class="social-icon">
+                      <use href="./images/svgs/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                   <a class="social-link">
+                    <svg class="social-icon">
+                      <use href="./images/svgs/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                   </a>
+                </li>
+                <li>
+                   <a class="social-link">
+                    <svg class="social-icon">
+                      <use href="./images/svgs/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                   </a>
+                </li>
+              </ul>
             </li>
             <li class="barbers-list-item">
               <img width="370" src="images/barbers/Alan.jpg" alt="Alan" />
               <p class="barbers-name">Alan Black</p>
               <p class="barbers-ocupation">Extreme Barber</p>
+             <ul class="unstyled-list social-media-list">
+                <li>
+                  <a class="social-link">
+                    <svg class="social-icon">
+                      <use href="./images/svgs/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                   <a class="social-link">
+                    <svg class="social-icon">
+                      <use href="./images/svgs/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                   <a class="social-link">
+                    <svg class="social-icon">
+                      <use href="./images/svgs/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                   </a>
+                </li>
+                <li>
+                   <a class="social-link">
+                    <svg class="social-icon">
+                      <use href="./images/svgs/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                   </a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
       </section>
       <section class="barbers-pictures-container">
         <div class="barbers-pictures-align">
-          <h4 class="subtitle">In Latin, "barba" means "beard"</h4>
+          <h4 class="subtitle">
+            <svg  width="60" height="3">
+              <line x1="0" y1="2.5" x2="262.86" y2="2.5" stroke="#303030" stroke-width="1" />
+            </svg>
+            In Latin, "barba" means "beard"
+          </h4>
           <ul class="barbers-pictures-list unstyled-list">
             <li class="align-list-item">
               <img
@@ -248,9 +392,24 @@
         <div class="booking-container">
           <h2 class="title">Online-booking</h2>
           <ul class="booking-form unstyled-list">
-            <li class="text">Name<sup>*</sup></li>
-            <li class="text">Phone<sup>*</sup></li>
-            <li class="text">Message</li>
+            <li class="text">
+              Name<sup>*</sup>
+              <svg  width="270" height="3">
+                <line x1="0" y1="2.5" x2="262.86" y2="2.5" stroke="rgba(157, 164, 189, 0.4)" stroke-width="1" />
+              </svg>
+            </li>
+            <li class="text">
+              Phone<sup>*</sup>
+              <svg  width="270" height="3">
+                <line x1="0" y1="2.5" x2="262.86" y2="2.5"stroke="rgba(157, 164, 189, 0.4)" stroke-width="1" />
+              </svg>
+            </li>
+            <li class="text">
+              Message
+              <svg  width="270" height="3">
+                <line x1="0" y1="2.5" x2="262.86" y2="2.5"stroke="rgba(157, 164, 189, 0.4)" stroke-width="1" />
+              </svg>
+            </li>
           </ul>
           <button class="button-nav" type="button">send</button>
         </div>
@@ -287,6 +446,9 @@
         <p class="copyright-text">&#169 Copyright 2020</p>
       </div>
       <div class="footer-social-media">
+        <svg  width="60" height="3">
+          <line x1="0" y1="2.5" x2="262.86" y2="2.5" stroke="#303030" stroke-width="1" />
+        </svg>
         <a class="social-media-link link" href="https://www.instagram.com/eusuntdorian/" target="_blank">Instagram</a>
         <a class="social-media-link link" href="https://www.youtube.com/@DorianPopaHatz" target="_blank">Youtube</a>
       </div>
