--- a/index.html
+++ b/index.html
@@ -421,21 +421,38 @@
                 class="link contact-item"
                 href="https://goo.gl/maps/ZL8GriiBfxLYy5f1A"
                 target="_blank"
-                >st. Vasilkovaya, 7A Kiev, 08132</a
+                >
+                <svg class="links-icons">
+                  <use href="./images/svgs/symbol-defs2.svg#icon-location"></use>
+                </svg>
+                st. Vasilkovaya, 7A Kiev, 08132</a
               >
             </li>
             <li>
               <a class="link contact-item" href="tel:+380441111111"
-                >+38 044 111 11 11</a
+                >
+                <svg class="links-icons">
+                  <use href="./images/svgs/symbol-defs2.svg#icon-phone"></use>
+                </svg>
+                +38 044 111 11 11</a
               >
             </li>
             <li>
               <a  class="link contact-item email" href="mailto:barbershop@email.com"
-                >barbershop@email.com</a
+                >
+                <svg class="links-icons">
+                  <use href="./images/svgs/symbol-defs2.svg#icon-mail"></use>
+                </svg>
+                barbershop@email.com</a
               >
             </li>
           </ul>
-          <h4 class="subtitle">Working hours</h4>
+          <h4 class="subtitle">
+            <svg  width="60" height="3">
+              <line x1="0" y1="2.5" x2="262.86" y2="2.5" stroke="rgba(157, 164, 189, 0.4)" stroke-width="1" />
+            </svg>
+            Working hours
+          </h4>
           <p class="text">Every day from 9:00 to 22:00</p>
         </div>
       </section>
