--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="header-container">
       <div class="logo-container">
         <a class="link" href="index.html">
-          <img src="images/LogoBarber.png" alt="Logoul Frizeriei" />
+          <img width="68.93" src="images/LogoBarber.png" alt="Logoul Frizeriei" />
         </a>
         <div class="social-media">
           <svg  width="60" height="3">
